# lightweight-evals

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: adapter_example.py  quickstart.ipynb
src/lightweight_evals/: __init__.py  cli.py  config.py  runner.py  scoring.py  utils.py
src/lightweight_evals/adapters/: __init__.py  base.py  dummy.py  openai.py
src/lightweight_evals/data/: consistency.jsonl  harmlessness.jsonl  robustness.jsonl
src/lightweight_evals/evals/: __init__.py  base.py  consistency.py  harmlessness.py  robustness.py
src/lightweight_evals/reporting/: __init__.py  report_builder.py
src/lightweight_evals/reporting/templates/: report.html.j2
tests/: test_adapters.py  test_cli.py  test_evals.py  test_scoring.py
